[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
serde = { version = "1.0.175", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }


[dev-dependencies]
reqwest = "0.11"
